user profile page, updated turbine carads, command logs history, maintenance log history, alerts settings
