# server/Features/Auth/Models/Requests/UpdateProfileRequest.cs
@@ -1,0 +1,3 @@
+namespace server.Features.Auth.Models.Requests;
+
+public record UpdateProfileRequest(string? Name, string? CurrentPassword, string? NewPassword);
